# voyelles-pendues-engine

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
include/: engine.h  enigneinterface.h
scripts/: preprocess_dictionnary.py
src/: engine.cpp  enigneinterface.cpp
tests/: unit-engine.cpp
tests/datas/: test_valid_words.txt
tools/: main.cpp  main_utf8.cpp  utf8.cpp
